# res-cohort-matching

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify_a4_docs.py
.claude/agents/: cohort-data-expert.md
ADNIMERGE2/: DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md
ADNIMERGE2/R/: ADNIMERGE2-package.R  analysis-data-prep.R  checks-assert.R  data.R  enrollment-utils.R  pacc.R  score-function.R  utils.R
ADNIMERGE2/data/: ADAE.rda  ADAS.rda  ADDCOMM.rda  ADI.rda  ADNI2_ECG.rda  ADNI2_OTELGTAU.rda  ADNI2_VISITID.rda  ADQS.rda  ADRS.rda  ADSL.rda  ADSXLIST.rda  ADVERSE.rda  AE.rda  ALIQUOT_COUNT.rda  AMAS.rda  AMNART.rda  AMYDISC.rda  AMYMETA.rda  AMYQC.rda  AMYREAD.rda  ANTIAMYTX.rda  APOERES.rda  ARM.rda  AV45META.rda  (+191 more)
adni_matching/: __init__.py  inventory.py  merge.py  run_pipeline.py  utils.py
adnimerge_py/: README.md  __init__.py  __main__.py  build_adnimerge.py  compare_ref.py  run.py
docs/: A4_baseline_csv.md  A4_column_dictionary.md  A4_protocol.md  A4_tau_suvr_sources.md  A4_viscode_reference.md  OASIS3_data_catalog.md  OASIS3_demographics.md  OASIS3_file_index.md  OASIS3_join_relationships.md  OASIS3_pet_imaging.md  OASIS3_protocol.md  OASIS3_session_label_reference.md  OASIS3_uds_forms.md  README.md  adni4_viscode_error_report.md  column_diff_report.md  matching_validation_report.md
ini/: example.ini
scripts/: a4_availability_figure.py  a4_screening_handoff.py  av1451_t1_gap_analysis.py  compare_merged.py  mk6240_t1_gap_analysis.py  remap_proc_viscode.py  reorganize_nii_by_viscode.py  reorganize_proc_t1.py  verify_adnimerge_1toN.py
(+394 files in other folders)
