[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "res-cohort-matching"
version = "4.0.0"
description = "Multi-cohort neuroimaging data extraction and DICOM matching pipeline"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "pydicom", "pyreadr", "joblib"]

[project.scripts]
adni-extract = "adni.extraction.cli:main"
adni-match = "adni.matching.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
